@@ -8,12 +8,12 @@
 		sln = solution "MySolution"
 		configurations { "Debug" }
 		platforms {}
-	
+
 		prj = project "MyProject"
 		language "C++"
 	end
-	
-	local function get_buffer()
+
+	local function get_buffer(platform)
 		premake.bake.buildconfigs()
 		sln.vstudio_configs = premake.vstudio.buildconfigs(sln)
 		prj = premake.solution.getproject(sln, 1)
@@ -22,7 +22,7 @@
 		return buffer
 	end
 
-		
+
 	function vs10_project_kinds.staticLib_containsLibSection()
 		kind "StaticLib"
 		local buffer = get_buffer()
@@ -34,7 +34,7 @@
 		test.string_contains(buffer,'<Lib>.*<OutputFile>.*MyProject.lib.*</OutputFile>.*</Lib>')
 	end
 
-		
+
 	function vs10_project_kinds.staticLib_valueInMinimalRebuildIsTrue()
 		kind "StaticLib"
 		flags  {"Symbols"}
@@ -64,7 +64,7 @@
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<Link>.*<ImportLibrary>.*</ImportLibrary>.*</Link>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_bufferContainsImportLibrary()
 		kind "SharedLib"
 		local buffer = get_buffer()
@@ -83,58 +83,58 @@
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<PropertyGroup>.*<IgnoreImportLibrary.*</IgnoreImportLibrary>.*</PropertyGroup>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_withNoImportLibraryFlag_propertyGroupSectionContainsIgnoreImportLibrary()
 		kind "SharedLib"
 		flags{"NoImportLib"}
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<PropertyGroup>.*<IgnoreImportLibrary.*</IgnoreImportLibrary>.*</PropertyGroup>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_withOutNoImportLibraryFlag_ignoreImportLibraryValueIsFalse()
 		kind "SharedLib"
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<PropertyGroup>.*<IgnoreImportLibrary.*false</IgnoreImportLibrary>.*</PropertyGroup>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_withNoImportLibraryFlag_ignoreImportLibraryValueIsTrue()
 		kind "SharedLib"
 		flags{"NoImportLib"}
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<PropertyGroup>.*<IgnoreImportLibrary.*true</IgnoreImportLibrary>.*</PropertyGroup>')
 	end
-	
+
 	function vs10_project_kinds.staticLib_doesNotContainLinkIncremental()
 		kind "StaticLib"
 		local buffer = get_buffer()
 		test.string_does_not_contain(buffer,'<LinkIncremental.*</LinkIncremental>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_withoutOptimisation_linkIncrementalValueIsTrue()
 		kind "SharedLib"
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<LinkIncremental.*true</LinkIncremental>')
 	end
-	
+
 	function vs10_project_kinds.sharedLib_withOptimisation_linkIncrementalValueIsFalse()
 		kind "SharedLib"
 		flags{"Optimize"}
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<LinkIncremental.*false</LinkIncremental>')
 	end
-	
+
 	function vs10_project_kinds.kindDoesNotMatter_noAdditionalDirectoriesSpecified_bufferDoesNotContainAdditionalIncludeDirectories()
 		kind "SharedLib"
 		local buffer = get_buffer()
 		test.string_does_not_contain(buffer,'<ClCompile>.*<AdditionalIncludeDirectories>.*</ClCompile>')
 	end
-	
+
 	function vs10_project_kinds.configType_configIsWindowedApp_resultComparesEqualToApplication()
 		local t = { kind = "WindowedApp"}
 		local result = premake.vstudio.vc2010.config_type(t)
 		test.isequal('Application',result)
 	end
-	
+
 	function vs10_project_kinds.linkOptions_staticLib_bufferContainsAdditionalOptionsInSideLibTag()
 		kind "StaticLib"
 		linkoptions{'/dummyOption'}
@@ -142,33 +142,33 @@
 		test.string_contains(get_buffer(),
 			'<AdditionalOptions>.*%%%(AdditionalOptions%)</AdditionalOptions>.*</Lib>')
 	end
-	
+
 	function vs10_project_kinds.noLinkOptions_staticLib_bufferDoesNotContainAdditionalOptionsInSideLibTag()
 		kind "StaticLib"
 
 		test.string_does_not_contain(get_buffer(),
 			'<AdditionalOptions>.*%%%(AdditionalOptions%)</AdditionalOptions>.*</Lib>')
-	end		
-	
+	end
+
 	function vs10_project_kinds.linkOptions_staticLib_bufferContainsPassedOption()
 		kind "StaticLib"
 		linkoptions{'/dummyOption'}
 
 		test.string_contains(get_buffer(),
 			'<AdditionalOptions>/dummyOption %%%(AdditionalOptions%)</AdditionalOptions>.*</Lib>')
-	end	
-	
+	end
+
 	function vs10_project_kinds.linkOptions_windowedApp_bufferContainsAdditionalOptionsInSideLinkTag()
 		kind "WindowedApp"
 		linkoptions{'/dummyOption'}
-		
+
 		test.string_contains(get_buffer(),
 			'<AdditionalOptions>.* %%%(AdditionalOptions%)</AdditionalOptions>.*</Link>')
-	end	
+	end
 	function vs10_project_kinds.linkOptions_consoleApp_bufferContainsAdditionalOptionsInSideLinkTag()
 		kind "ConsoleApp"
 		linkoptions{'/dummyOption'}
-		
+
 		test.string_contains(get_buffer(),
 			'<AdditionalOptions>.* %%%(AdditionalOptions%)</AdditionalOptions>.*</Link>')
 	end
@@ -176,12 +176,12 @@
 	function vs10_project_kinds.linkOptions_sharedLib_bufferContainsAdditionalOptionsInSideLinkTag()
 		kind "SharedLib"
 		linkoptions{'/dummyOption'}
-		
+
 		test.string_contains(get_buffer(),
 			'<AdditionalOptions>.* %%%(AdditionalOptions%)</AdditionalOptions>.*</Link>')
-	end			
-		
-		
+	end
+
+
 	function vs10_project_kinds.staticLibX64_TargetMachineSetInLib()
 		kind "StaticLib"
 		platforms{'x64'}
@@ -206,13 +206,6 @@
 	function vs10_project_kinds.staticLibX32_TargetMachineInLibSetToMachineX86()
 		kind "StaticLib"
 		platforms{'x32'}
-		local buffer = get_buffer()
-		test.string_contains(buffer,'<Lib>.*<TargetMachine>MachineX86</TargetMachine>.*</Lib>')
-	end
-
-	function vs10_project_kinds.staticLibNative_TargetMachineInLibSetToMachineX86()
-		kind "StaticLib"
-		platforms{'Native'}
 		local buffer = get_buffer()
 		test.string_contains(buffer,'<Lib>.*<TargetMachine>MachineX86</TargetMachine>.*</Lib>')
 	end
